--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "test:coverage": "node --experimental-vm-modules --experimental-import-meta-resolve node_modules/jest/bin/jest.js --coverage"
   },
   "dependencies": {
-    "canvas": "^3.1.0",
+    "@reduxjs/toolkit": "^2.2.1",
+    "canvas": "^2.11.2",
     "react": "^18.2.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-redux": "^9.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.22.5",
@@ -26,18 +28,26 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
-    "@types/react": "^18.0.27",
-    "@types/react-dom": "^18.0.10",
+    "@types/node": "^22.13.2",
+    "@types/react": "^18.3.18",
+    "@types/react-dnd": "^3.0.2",
+    "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^3.1.0",
     "babel-jest": "^29.3.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
+    "ts-jest": "^29.1.2",
+    "typescript": "^5.7.3",
     "vite": "^4.1.0"
   },
   "jest": {
     "testEnvironment": "jsdom",
-    "extensionsToTreatAsEsm": [".jsx"],
+    "extensionsToTreatAsEsm": [
+      ".jsx",
+      ".ts",
+      ".tsx"
+    ],
     "moduleNameMapper": {
       "\\.(css|less|scss|sass)$": "identity-obj-proxy",
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/src/__mocks__/fileMock.js",
@@ -48,7 +58,13 @@
       "^react-dnd-html5-backend$": "<rootDir>/node_modules/react-dnd-html5-backend"
     },
     "transform": {
-      "^.+\\.(js|jsx)$": ["babel-jest", { "rootMode": "upward" }]
+      "^.+\\.(ts|tsx)$": "ts-jest",
+      "^.+\\.(js|jsx)$": [
+        "babel-jest",
+        {
+          "rootMode": "upward"
+        }
+      ]
     },
     "setupFilesAfterEnv": [
       "<rootDir>/src/setupTests.js"
