--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "generate-cards": "node scripts/generateCardImages.js",
     "test": "node --experimental-vm-modules --experimental-import-meta-resolve node_modules/jest/bin/jest.js",
     "test:watch": "node --experimental-vm-modules --experimental-import-meta-resolve node_modules/jest/bin/jest.js --watch",
-    "test:coverage": "node --experimental-vm-modules --experimental-import-meta-resolve node_modules/jest/bin/jest.js --coverage"
+    "test:coverage": "node --experimental-vm-modules --experimental-import-meta-resolve node_modules/jest/bin/jest.js --coverage",
+    "find-deadcode": "knip"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.1",
@@ -37,6 +38,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
+    "knip": "^5.44.1",
     "ts-jest": "^29.1.2",
     "typescript": "^5.7.3",
     "vite": "^4.1.0"
