--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "test": "node --experimental-vm-modules --experimental-import-meta-resolve node_modules/jest/bin/jest.js",
     "type-check": "tsc --noEmit",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,css,scss,html,json}\"",
+    "lint": "eslint . --config eslint.config.js",
+    "lint:fix": "eslint . --config eslint.config.js --fix",
     "test:watch": "node --experimental-vm-modules --experimental-import-meta-resolve node_modules/jest/bin/jest.js --watch",
     "test:coverage": "node --experimental-vm-modules --experimental-import-meta-resolve node_modules/jest/bin/jest.js --coverage",
     "find-deadcode": "knip"
@@ -35,8 +37,14 @@
     "@types/react": "^18.3.18",
     "@types/react-dnd": "^3.0.2",
     "@types/react-dom": "^18.3.5",
+    "@typescript-eslint/eslint-plugin": "^8.24.0",
+    "@typescript-eslint/parser": "^8.24.0",
     "@vitejs/plugin-react": "^3.1.0",
     "babel-jest": "^29.3.1",
+    "eslint": "^9.20.1",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-react-hooks": "^5.1.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
