--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "generate-cards": "node scripts/generateCardImages.js",
+    "generate-path-cards": "node scripts/generatePathCardImages.js",
+    "generate-action-cards": "node scripts/generateActionCardImages.js",
     "test": "node --experimental-vm-modules --experimental-import-meta-resolve node_modules/jest/bin/jest.js",
     "type-check": "tsc --noEmit",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,css,scss,html,json}\"",
@@ -18,8 +19,13 @@
     "find-deadcode": "knip"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.2",
+    "@iconify/json": "^2.2.307",
     "@reduxjs/toolkit": "^2.2.1",
+    "@svgdotjs/svg.js": "^3.2.4",
     "canvas": "^2.11.2",
+    "lucide-static": "^0.473.0",
+    "opentype.js": "^1.3.4",
     "react": "^18.2.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
